--- a/src/App.scss
+++ b/src/App.scss
@@ -49,8 +49,9 @@ header button{
   padding: 10px 20px;
   border: #a276e7 solid 1px;
   border-radius: 40px;
+  cursor: pointer;
   &:hover{
-    background-color:#874ee48e ;
+    background-color:#874ee4d3 ;
   }
 }
 header button a{
@@ -113,7 +114,8 @@ form button{
   border-radius: 40px;
   padding: 10px;
   background-color:#35e5b4 ;
-  border:#35e5b4;
+  border:none;
+  cursor: pointer;
   &:hover{
     background-color:#35e5b3c4;
   }
@@ -122,6 +124,7 @@ form button{
 form button a{
   color: black;
   text-decoration: none;
+  cursor: pointer;
 }
 .pets{
   padding:60px 0;
@@ -137,6 +140,7 @@ button.favourites{
   border: none;
   color: #fc751b;
   font-size: 20px;
+  cursor: pointer;
   &:hover{
     color:#fc751bc0 ;
   }
@@ -176,6 +180,7 @@ p.searchResults{
     font-size: 25px;
     background-color: #e7ddf6;
     border: none;
+    cursor: pointer;
   }
   .cross{
     position: absolute;
