--- a/src/App.scss
+++ b/src/App.scss
@@ -207,6 +207,7 @@ p.searchResults{
   p{
     font-size: 15px;
     font-weight: 900;
+    font-family: 'Indie Flower'
     span{
       color: #6624cf;
     }
